--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
+    "admin": "node ./scripts/admin/admin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,6 +14,8 @@
   "author": "Miguel Palacio <migpalg@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^16.11.11",
+    "@types/yargs": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.2.0",
@@ -20,7 +23,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "lerna": "^4.0.0",
     "prettier": "2.4.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "yargs": "^17.3.0"
   },
   "workspaces": [
     "packages/*",
